--- a/rk35xx/.config
+++ b/rk35xx/.config
@@ -655,8 +655,8 @@ CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libwrap=y
 CONFIG_PACKAGE_libx264=y
 CONFIG_PACKAGE_libxml2=y
-CONFIG_PACKAGE_linkease=y
-CONFIG_PACKAGE_linkmount=y
+# CONFIG_PACKAGE_linkease=y
+# CONFIG_PACKAGE_linkmount=y
 CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_losetup=y
@@ -676,7 +676,7 @@ CONFIG_PACKAGE_luci-app-fan=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-istorex=m
-CONFIG_PACKAGE_luci-app-linkease=y
+# CONFIG_PACKAGE_luci-app-linkease=y
 CONFIG_PACKAGE_luci-app-nfs=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-oled=y
@@ -699,7 +699,7 @@ CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-fan-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-linkease-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-linkease-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-nfs-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-oaf-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-oled-zh-cn=y
